--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Description: A package for analyzing fisheries stock rebuilding trajectories and
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 Imports:
     FLBRP,
     FLife,
@@ -22,4 +22,12 @@ Suggests:
     testthat,
     knitr,
     rmarkdown
+Collate:
+    generic.R
+    package.R
+    utils.R
+    abi.R
+    rebuild-methods.R
+    FLBRP-blim.R
+    FLBRP-rebuild.R
 VignetteBuilder: knitr 
