--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ exportMethods(abiMsy)
 exportMethods(blim)
 exportMethods(rebuild)
 exportMethods(rebuildTime)
+export(gt)
+exportClasses(Rebuild)
 importFrom(FLBRP,computeRefpts)
 importFrom(FLBRP,refpts)
 importFrom(FLCore,FLPar)
@@ -25,3 +27,4 @@ importFrom(plyr,ddply)
 importFrom(plyr,dlply)
 importFrom(plyr,ldply)
 importFrom(plyr,mdply)
+importFrom(mpb,biodyn)
