--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,26 +5,34 @@ export(abiAge)
 export(abiMsy)
 export(calculateRecoveryTime)
 export(calculateTmax)
+export(gt)
 export(msyVirgin)
 export(plotRebuildTrajectories)
 export(rebuild)
 export(rebuildTime)
+exportClasses(Rebuild)
 exportMethods(abi)
 exportMethods(abiAge)
 exportMethods(abiMsy)
 exportMethods(blim)
 exportMethods(rebuild)
 exportMethods(rebuildTime)
-export(gt)
-exportClasses(Rebuild)
 importFrom(FLBRP,computeRefpts)
 importFrom(FLBRP,refpts)
 importFrom(FLCore,FLPar)
+importFrom(FLCore,FLQuant)
+importFrom(FLCore,catch)
+importFrom(FLCore,fwd)
+importFrom(FLCore,params)
+importFrom(FLCore,propagate)
+importFrom(FLCore,refpts)
+importFrom(FLCore,stock)
+importFrom(FLCore,window)
 importFrom(akima,interp)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
+importFrom(mpb,biodyn)
 importFrom(plyr,ddply)
 importFrom(plyr,dlply)
 importFrom(plyr,ldply)
 importFrom(plyr,mdply)
-importFrom(mpb,biodyn)
