--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,3 +37,12 @@ importFrom(plyr,ddply)
 importFrom(plyr,dlply)
 importFrom(plyr,ldply)
 importFrom(plyr,mdply)
+
+export(gtLife)
+export(rTime)
+export(brebuild)
+export(rTime_series_target)
+export(rTime_series_FLR)
+exportMethods(rTime)
+exportMethods(brebuild)
+exportMethods(rTime_series_target)
