--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,10 +27,11 @@ Collate:
     generic.R
     package.R
     utils.R
-    rebuild-methods.R
     biodyn.R
     biodyn-rebuild.R
+    rebuild-pellaT.R
     abi.R
+    rebuild-methods.R
     FLBRP-blim.R
     FLBRP-rebuild.R
 VignetteBuilder: knitr 
