--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,16 +25,11 @@ importFrom(FLCore,catch)
 importFrom(FLCore,fwd)
 importFrom(FLCore,params)
 importFrom(FLCore,propagate)
-importFrom(FLCore,refpts)
 importFrom(FLCore,stock)
 importFrom(FLCore,window)
-importFrom(akima,interp)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
 importFrom(mpb,biodyn)
-importFrom(plyr,ddply)
-importFrom(plyr,dlply)
-importFrom(plyr,ldply)
-importFrom(plyr,mdply)
+importFrom(data.table,as.data.table)
 
 
