--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,14 +19,7 @@ exportMethods(rebuild)
 exportMethods(rebuildTime)
 importFrom(FLBRP,computeRefpts)
 importFrom(FLBRP,refpts)
-importFrom(FLCore,FLPar)
-importFrom(FLCore,FLQuant)
-importFrom(FLCore,catch)
-importFrom(FLCore,fwd)
-importFrom(FLCore,params)
-importFrom(FLCore,propagate)
-importFrom(FLCore,stock)
-importFrom(FLCore,window)
+import(FLCore)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
 importFrom(mpb,biodyn)
