--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,9 @@ exportMethods(abiMsy)
 exportMethods(blim)
 exportMethods(rebuild)
 exportMethods(rebuildTime)
+export(rickerRec)
+export(bevertonRec)
+export(segRegRec)
 importFrom(FLBRP,computeRefpts)
 importFrom(FLBRP,refpts)
 import(FLCore)
