--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,29 +3,39 @@
 export(abi)
 export(abiAge)
 export(abiMsy)
+export(bevertonRec)
+export(blim)
+export(brebuild)
 export(calculateRecoveryTime)
 export(calculateTmax)
 export(gt)
+export(gtLife)
+export(gtR0)
+export(invSRR)
 export(msyVirgin)
 export(plotRebuildTrajectories)
+export(rTime)
 export(rebuild)
-export(time)
+export(rebuildTime)
+export(recHat)
+export(rickerRec)
+export(segRegRec)
 exportClasses(Rebuild)
 exportMethods(abi)
 exportMethods(abiAge)
 exportMethods(abiMsy)
+exportMethods(bevertonRec)
 exportMethods(blim)
+exportMethods(brebuild)
+exportMethods(invSRR)
+exportMethods(rTime)
 exportMethods(rebuild)
 exportMethods(rebuildTime)
-export(rickerRec)
-export(bevertonRec)
-export(segRegRec)
+exportMethods(recHat)
+exportMethods(rickerRec)
+exportMethods(segRegRec)
 importFrom(FLBRP,computeRefpts)
 importFrom(FLBRP,refpts)
-import(FLCore)
+importFrom(FLCore,FLPar)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
-importFrom(mpb,biodyn)
-importFrom(data.table,as.data.table)
-
-
