--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(abi)
 export(abiAge)
 export(abiMsy)
-export(bevertonRec)
+export(abistock)
 export(blim)
 export(brebuild)
 export(calculateRecoveryTime)
@@ -17,23 +17,16 @@ export(plotRebuildTrajectories)
 export(rTime)
 export(rebuild)
 export(rebuildTime)
-export(recHat)
-export(rickerRec)
-export(segRegRec)
 exportClasses(Rebuild)
 exportMethods(abi)
 exportMethods(abiAge)
 exportMethods(abiMsy)
-exportMethods(bevertonRec)
 exportMethods(blim)
 exportMethods(brebuild)
 exportMethods(invSRR)
 exportMethods(rTime)
 exportMethods(rebuild)
 exportMethods(rebuildTime)
-exportMethods(recHat)
-exportMethods(rickerRec)
-exportMethods(segRegRec)
 importFrom(FLBRP,computeRefpts)
 importFrom(FLBRP,refpts)
 importFrom(FLCore,FLPar)
