refptsEB turned into a method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(plotRebuildTrajectories)
 export(rTime)
 export(rebuild)
 export(rebuildTime)
+export(refptsEB)
 exportMethods(abi)
 exportMethods(abiAge)
 exportMethods(abiMsy)
