--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,18 +16,83 @@ export(plotRebuildTrajectories)
 export(rTime)
 export(rebuild)
 export(rebuildTime)
+export(refCreate)
 export(refptsEB)
+export(rmax)
+export(rmsy)
+export(rvirgin)
+export(years)
+export(rboot)
 exportMethods(abi)
 exportMethods(abiAge)
 exportMethods(abiMsy)
 exportMethods(blim)
 exportMethods(brebuild)
 exportMethods(invSRR)
+exportMethods(refCreate)
+exportMethods(refptsEB)
 exportMethods(rTime)
 exportMethods(rebuild)
 exportMethods(rebuildTime)
+exportMethods(rmax)
+exportMethods(rmsy)
+exportMethods(rvirgin)
+exportMethods(years)
+exportMethods(rboot)
 importFrom(FLBRP,computeRefpts)
 importFrom(FLBRP,refpts)
+importFrom(FLBRP,brp)
 importFrom(FLCore,FLPar)
+importFrom(FLCore,FLQuant)
+importFrom(FLCore,as.FLQuant)
+importFrom(FLCore,propagate)
+importFrom(FLCore,fwd)
+importFrom(FLCore,ssb)
+importFrom(FLCore,fbar)
+importFrom(FLCore,stock.n)
+importFrom(FLCore,stock)
+importFrom(FLCore,catch)
+importFrom(FLCore,ebiomass)
+importFrom(FLCore,ages)
+importFrom(FLCore,quantSums)
+importFrom(FLCore,dims)
+importFrom(FLCore,dimnames)
+importFrom(FLCore,an)
+importFrom(FLCore,qapply)
+importFrom(FLCore,qmax)
+importFrom(FLCore,expand)
+importFrom(FLCore,window)
+importFrom(FLCore,params)
+importFrom(FLCore,model)
+importFrom(FLCore,SRModelName)
+importFrom(FLCore,as.data.frame)
+importFrom(FLife,gt)
+importFrom(FLife,lhEql)
+importFrom(FLife,lhPar)
+importFrom(FLife,leslie)
+importFrom(FLife,lambda)
+importFrom(ggplotFL,ggplot)
+importFrom(ggplotFL,geom_line)
+importFrom(ggplotFL,geom_hline)
+importFrom(ggplotFL,theme_minimal)
+importFrom(ggplotFL,labs)
+importFrom(ggplotFL,aes)
+importFrom(plyr,ldply)
+importFrom(plyr,mdply)
+importFrom(plyr,ddply)
+importFrom(plyr,transform)
+importFrom(dplyr,arrange)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,summarise)
+importFrom(popbio,lambda)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
+importFrom(methods,is)
+importFrom(methods,as)
+importFrom(data.table,as.data.table)
+importFrom(data.table,setDT)
+importFrom(data.table,`:=`)
+importFrom(data.table,.SD)
+importFrom(akima,interp)
+importFrom(gsl,lambert_Wm1)
