--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,17 +3,62 @@
 export(abi)
 export(abiAge)
 export(abiMsy)
-export(abistock)
+export(ageMax)
+export(ageMaxQ)
+export(applyPriors)
+export(applyScenarioAnalysis)
+export(applyScenarioConfig)
 export(blim)
+export(bootstrapFLBRP)
+export(bootstrapSingleFLBRP)
 export(brebuild)
+export(calculateRebuildTimes)
 export(calculateRecoveryTime)
+export(calculateStatistics)
 export(calculateTmax)
+export(checkSystemResources)
+export(cleanAndPrepareData)
+export(cleanColumnNames)
+export(cleanupParallelProcessing)
+export(combineScenarioResults)
+export(compareMultipleScenarios)
+export(compareScenarios)
+export(createAnalysisReport)
+export(createScenarioConfig)
+export(createScenarioMatrix)
+export(createSummaryStatsPlot)
+export(detectOutliers)
+export(ebiomass)
+export(evaluateRebuildPotential)
+export(exportResultsSummary)
+export(exportResultsToMultipleFormats)
+export(exportSummaryStatistics)
+export(exportToHTML)
+export(exportToPDF)
+export(extractRefpts)
+export(fitPellatDirect)
+export(bmsyK2p)
+export(production)
+export(generateReportContent)
+export(generateScenarioReport)
 export(gtLife)
 export(gtR0)
 export(invSRR)
+export(mergeTimeSeriesRefpts)
+export(monitorProgress)
 export(msyVirgin)
+export(optimizeParallelSettings)
+export(parallelRebuildAnalysis)
+export(parallelRefptExtraction)
+export(pellat)
+export(plotOMPerformance)
+export(plotRebuildTimes)
 export(plotRebuildTrajectories)
+export(plotRefptCorrelations)
+export(plotRefptDistribution)
+export(processBreakpointData)
 export(rTime)
+export(rboot_years)
 export(rebuild)
 export(rebuildTime)
 export(refCreate)
@@ -21,78 +66,39 @@ export(refptsEB)
 export(rmax)
 export(rmsy)
 export(rvirgin)
-export(years)
-export(rboot)
+export(safeExecute)
+export(saveAnalysisResults)
+export(saveSessionInfo)
+export(setupParallelProcessing)
+export(standardizeRefptData)
+export(validateBootstrapConfig)
+export(validateFLBRPObject)
+export(validateInputData)
+export(validatePriorConfig)
+export(validateScenarioConfig)
 exportMethods(abi)
 exportMethods(abiAge)
 exportMethods(abiMsy)
+exportMethods(ageMax)
+exportMethods(ageMaxQ)
 exportMethods(blim)
 exportMethods(brebuild)
+exportMethods(ebiomass)
+exportMethods(pellatMle)
 exportMethods(invSRR)
-exportMethods(refCreate)
-exportMethods(refptsEB)
+exportMethods(msyVirgin)
+exportMethods(pellat)
 exportMethods(rTime)
 exportMethods(rebuild)
 exportMethods(rebuildTime)
+exportMethods(refCreate)
+exportMethods(refptsEB)
 exportMethods(rmax)
 exportMethods(rmsy)
+exportMethods(pellatMle)
 exportMethods(rvirgin)
-exportMethods(years)
-exportMethods(rboot)
 importFrom(FLBRP,computeRefpts)
 importFrom(FLBRP,refpts)
-importFrom(FLBRP,brp)
 importFrom(FLCore,FLPar)
-importFrom(FLCore,FLQuant)
-importFrom(FLCore,as.FLQuant)
-importFrom(FLCore,propagate)
-importFrom(FLCore,fwd)
-importFrom(FLCore,ssb)
-importFrom(FLCore,fbar)
-importFrom(FLCore,stock.n)
-importFrom(FLCore,stock)
-importFrom(FLCore,catch)
-importFrom(FLCore,ebiomass)
-importFrom(FLCore,ages)
-importFrom(FLCore,quantSums)
-importFrom(FLCore,dims)
-importFrom(FLCore,dimnames)
-importFrom(FLCore,an)
-importFrom(FLCore,qapply)
-importFrom(FLCore,qmax)
-importFrom(FLCore,expand)
-importFrom(FLCore,window)
-importFrom(FLCore,params)
-importFrom(FLCore,model)
-importFrom(FLCore,SRModelName)
-importFrom(FLCore,as.data.frame)
-importFrom(FLife,gt)
-importFrom(FLife,lhEql)
-importFrom(FLife,lhPar)
-importFrom(FLife,leslie)
-importFrom(FLife,lambda)
-importFrom(ggplotFL,ggplot)
-importFrom(ggplotFL,geom_line)
-importFrom(ggplotFL,geom_hline)
-importFrom(ggplotFL,theme_minimal)
-importFrom(ggplotFL,labs)
-importFrom(ggplotFL,aes)
-importFrom(plyr,ldply)
-importFrom(plyr,mdply)
-importFrom(plyr,ddply)
-importFrom(plyr,transform)
-importFrom(dplyr,arrange)
-importFrom(dplyr,filter)
-importFrom(dplyr,group_by)
-importFrom(dplyr,summarise)
-importFrom(popbio,lambda)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
-importFrom(methods,is)
-importFrom(methods,as)
-importFrom(data.table,as.data.table)
-importFrom(data.table,setDT)
-importFrom(data.table,`:=`)
-importFrom(data.table,.SD)
-importFrom(akima,interp)
-importFrom(gsl,lambert_Wm1)
