--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(applyPriors)
 export(applyScenarioAnalysis)
 export(applyScenarioConfig)
 export(blim)
+export(bmsyK)
+export(bmsyK2p)
 export(bootstrapFLBRP)
 export(bootstrapSingleFLBRP)
 export(brebuild)
@@ -37,8 +39,6 @@ export(exportToHTML)
 export(exportToPDF)
 export(extractRefpts)
 export(fitPellatDirect)
-export(bmsyK2p)
-export(production)
 export(generateReportContent)
 export(generateScenarioReport)
 export(gtLife)
@@ -48,21 +48,26 @@ export(mergeTimeSeriesRefpts)
 export(monitorProgress)
 export(msyVirgin)
 export(optimizeParallelSettings)
+export(p2shape)
 export(parallelRebuildAnalysis)
 export(parallelRefptExtraction)
 export(pellat)
+export(pellatMle)
 export(plotOMPerformance)
 export(plotRebuildTimes)
 export(plotRebuildTrajectories)
 export(plotRefptCorrelations)
 export(plotRefptDistribution)
 export(processBreakpointData)
+export(production)
+export(rFmsy2p)
 export(rTime)
 export(rboot_years)
 export(rebuild)
 export(rebuildTime)
 export(refCreate)
 export(refptsEB)
+export(refs)
 export(rmax)
 export(rmsy)
 export(rvirgin)
@@ -74,6 +79,7 @@ export(standardizeRefptData)
 export(validateBootstrapConfig)
 export(validateFLBRPObject)
 export(validateInputData)
+export(validatePellatParams)
 export(validatePriorConfig)
 export(validateScenarioConfig)
 exportMethods(abi)
@@ -84,10 +90,11 @@ exportMethods(ageMaxQ)
 exportMethods(blim)
 exportMethods(brebuild)
 exportMethods(ebiomass)
-exportMethods(pellatMle)
 exportMethods(invSRR)
 exportMethods(msyVirgin)
 exportMethods(pellat)
+exportMethods(pellatMle)
+exportMethods(production)
 exportMethods(rTime)
 exportMethods(rebuild)
 exportMethods(rebuildTime)
@@ -95,7 +102,6 @@ exportMethods(refCreate)
 exportMethods(refptsEB)
 exportMethods(rmax)
 exportMethods(rmsy)
-exportMethods(pellatMle)
 exportMethods(rvirgin)
 importFrom(FLBRP,computeRefpts)
 importFrom(FLBRP,refpts)
