--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,9 +14,16 @@ export(bmsyK2p)
 export(bootstrapFLBRP)
 export(bootstrapSingleFLBRP)
 export(brebuild)
+export(calculateCarryingCapacity)
+export(calculateFoxRecoveryTime)
+export(calculateGrowthRate)
+
+export(calculatePellatRecoveryTime)
 export(calculateRebuildTimes)
 export(calculateRecoveryTime)
+export(calculateScalingParameter)
 export(calculateStatistics)
+export(calculateTheoreticalMSY)
 export(calculateTmax)
 export(checkSystemResources)
 export(cleanAndPrepareData)
@@ -26,6 +33,8 @@ export(combineScenarioResults)
 export(compareMultipleScenarios)
 export(compareScenarios)
 export(createAnalysisReport)
+export(createEmptyFLPar)
+export(createModifiedPellatProduction)
 export(createScenarioConfig)
 export(createScenarioMatrix)
 export(createSummaryStatsPlot)
@@ -37,10 +46,13 @@ export(exportResultsToMultipleFormats)
 export(exportSummaryStatistics)
 export(exportToHTML)
 export(exportToPDF)
+export(extractFLBRPRefs)
 export(extractRefpts)
+export(fillFLPar)
 export(fitPellatDirect)
 export(generateReportContent)
 export(generateScenarioReport)
+export(getParamNames)
 export(gtLife)
 export(gtR0)
 export(invSRR)
@@ -49,17 +61,20 @@ export(monitorProgress)
 export(msyVirgin)
 export(optimizeParallelSettings)
 export(p2shape)
+export(shape)
 export(parallelRebuildAnalysis)
 export(parallelRefptExtraction)
-export(pellat)
-export(pellatMle)
+export(ptMle)
 export(plotOMPerformance)
 export(plotRebuildTimes)
 export(plotRebuildTrajectories)
 export(plotRefptCorrelations)
 export(plotRefptDistribution)
 export(processBreakpointData)
+export(processPellatIteration)
+export(processPellatIterationFlexible)
 export(production)
+export(productionModified)
 export(rFmsy2p)
 export(rTime)
 export(rboot_years)
@@ -79,8 +94,10 @@ export(standardizeRefptData)
 export(validateBootstrapConfig)
 export(validateFLBRPObject)
 export(validateInputData)
-export(validatePellatParams)
+export(validateModifiedProductionCurve)
+
 export(validatePriorConfig)
+export(validateProductionCurve)
 export(validateScenarioConfig)
 exportMethods(abi)
 exportMethods(abiAge)
@@ -92,9 +109,9 @@ exportMethods(brebuild)
 exportMethods(ebiomass)
 exportMethods(invSRR)
 exportMethods(msyVirgin)
-exportMethods(pellat)
-exportMethods(pellatMle)
+exportMethods(ptMle)
 exportMethods(production)
+exportMethods(productionModified)
 exportMethods(rTime)
 exportMethods(rebuild)
 exportMethods(rebuildTime)
@@ -103,8 +120,14 @@ exportMethods(refptsEB)
 exportMethods(rmax)
 exportMethods(rmsy)
 exportMethods(rvirgin)
+exportMethods(as.FLPar)
+exportMethods(p)
+exportMethods(r)
+exportMethods(msy)
+exportMethods(pt)
 importFrom(FLBRP,computeRefpts)
 importFrom(FLBRP,refpts)
+importFrom(FLBRP,FLBRPs)
 importFrom(FLCore,FLPar)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
