--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,7 +49,7 @@ Collate:
     scenario-management.R
     export-utils.R
     lag.R
-    pellatUtils.R
-    pellatRebuild.R
-    pellat.R
+    pet.R
+    ptRebuild.R
+    ptMle.R
 VignetteBuilder: knitr 
